<resources>
    <string name="app_name">My App</string>
    <string name="halo">Bagaimana Kabar Anda Hari Ini!</string>
    <string name="button_label_max">Max</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Button</string>
    <string name="textview">TextView</string>
    <string name="button_label_hitung">Hitung</string>
    <string name="hitung_initial_value">0</string>
    <string name="toast_pesan">Hebat Bro!</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="text_max">0</string>
    <string name="button_label_back">Back</string>

    <string name="article_title">Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD</string>

    <string name="button_label_toast">Toast</string>
    <string name="button_label_finish">Back</string>

    <string name="project_hello">Project Hello World</string>
    <string name="project_count">Project Count</string>
    <string name="project_two_act">Project Two Activity</string>
    <string name="project_sianida">Project Sianida</string>
    <string name="project_alarm">Project Alarm</string>

    <string name="zero">NULL</string>

    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the Let It Be album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series. For more information, see the Beatles Time Capsule at www.rockument.com. \n\n This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on The Lost Lennon Tapes Vol. 28, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions. \n\n

Highlights include: \n\n

Cry for a Shadow – Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs. \n\n

My Bonnie and Ain’t She Sweet — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal). \n\n

Searchin — A Jerry Leiber – Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys! \n\n

Love Me Do — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version. \n\n

She Loves You – Till There Was You – Twist and Shout — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark. \n\n

Leave My Kitten Alone — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker. \n\n

One After 909 — A song recorded for the ¨C11C album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R B feel to it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fragment String -->
    <string name="movAct1_title">The Hunger Games</string>
    <string name="movAct1_duration">Durasi: 2j 22m</string>
    <string name="movAct1_date">Tahun Rilis: 2012</string>
    <string name="movAct1_direc">Sutradara: Garry Ross</string>
    <string name="movAct1_syn">Sinopsis: Katniss, berusia 16 tahun yang tinggal bersama ibu dan adik perempuannya di distrik termiskin, Panem, wilayah yang tersisa dari Amerika Serikat. Dahulu distrik melancarkan perang terhadap Capitol dan kalah. Sebagai bagian dari syarat-syarat kapitulasi, setiap distrik diharuskan mengirim satu anak laki-laki dan seorang anak perempuan muncul di acara tahunan di televisi yang disebut, "The Hunger Games".</string>

    <string name="movAct2_title">Tenet</string>
    <string name="movAct2_duration">Durasi: 2j 30m</string>
    <string name="movAct2_date">Tahun Rilis: 2020</string>
    <string name="movAct2_direc">Sutradara: Christoper Nolan</string>
    <string name="movAct2_syn">Sinopsis: Dipersenjatai hanya dengan sepatah kata—Tenet—dan berjuang untuk kelangsungan dunia, sang protagonis mengarungi senjakala dunia spionase internasional dalam sebuah misi yang membawa pada sesuatu yang melebihi alir waktu.</string>

    <string name="movAct3_title">Mission Immpossible</string>
    <string name="movAct3_duration">Durasi: 2j 43m</string>
    <string name="movAct3_date">Tahun Rilis: 2023</string>
    <string name="movAct3_direc">Sutradara: Christopher McQuarrie</string>
    <string name="movAct3_syn">Sinopsis: Ethan Hunt dan tim IMF beraksi dalam misi paling berbahaya dari yang pernah ada: Melacak sebuah senjata jenis baru yang dapat mengancam kelangsungan umat manusia, sebelum jatuh ke tangan yang salah. Dengan kendali terhadap masa depan dan nasib dunia sebagai taruhannya, serta pihak-pihak jahat dari masa lalu Ethan yang turut mengintai, perlombaan maut lintas negara dimulai. Dihadang oleh musuh yang misterius dan berkuasa, Ethan dipaksa untuk menjadikan misi ini sebagai prioritas terpentingbahkan lebih penting dari nyawa orang-orang terdekatnya sekalipun.</string>

    <string name="movCom1_title">Megamind</string>
    <string name="movCom1_duration">Durasi: 1j 35m</string>
    <string name="movCom1_date">Tahun Rilis: 2010</string>
    <string name="movCom1_direc">Sutradara: Tom McGrath</string>
    <string name="movCom1_syn">Sinopsis: Megamind, penjahat super, selalu mengalahkan dan membunuh musuh-musuhnya. Karena bosan, ia menciptakan superhero yang malah menjadi jahat - dan memaksa dirinya sendiri untuk berubah menjadi pahlawan.</string>

    <string name="movCom2_title">The Boss Baby</string>
    <string name="movCom2_duration">Durasi: 1j 37m</string>
    <string name="movCom2_date">Tahun Rilis: 2017</string>
    <string name="movCom2_direc">Sutradara: Tom McGrath</string>
    <string name="movCom2_syn">Sinopsis: Tim, bocah 7 tahun, iri saat orangtuanya lebih perhatian pada adiknya. Ia segera sadar ternyata adik bayinya bisa berbicara. Keduanya pun bekerjasama untuk menggagalkan rencana jahat CEO Puppy Co.</string>

    <string name="movCom3_title">The Sea Beast</string>
    <string name="movCom3_duration">Durasi: 1j 55m</string>
    <string name="movCom3_date">Tahun Rilis: 2022</string>
    <string name="movCom3_direc">Sutradara: Chris Williams</string>
    <string name="movCom3_syn">Sinopsis: Film ini menceritakan tentang seorang pemburu monster laut dan seorang gadis yatim piatu yang bergabung dengan kelompok pemburu monster lautnya dalam pencarian mereka untuk menemukan Red Bluster yang sulit ditemui pada abad ke-17.</string>

    <string name="movRom1_title">Passenger</string>
    <string name="movRom1_duration">Durasi: 1j 56m</string>
    <string name="movRom1_date">Tahun Rilis: 2016</string>
    <string name="movRom1_direc">Sutradara: Morten Tyldum</string>
    <string name="movRom1_syn">Sinopsis: Jim terbangun di tengah perjalanannya menuju planet koloni dan ia memilih untuk membuat Aurora terjaga bersamanya. Suasana berubah kacau saat pesawat yang mereka tumpangi mengalami kerusakan.</string>

    <string name="movRom2_title">Kimi no Nawa</string>
    <string name="movRom2_duration">Durasi: 1j 47m</string>
    <string name="movRom2_date">Tahun Rilis: 2016</string>
    <string name="movRom2_direc">Sutradara: Makoto Shinkai</string>
    <string name="movRom2_syn">Sinopsis: Anime ini menceritakan siswa sekolah menengah Taki Tachibana dan Mitsuha Miyamizu. Tiba-tiba tubuh keduanya tertukar meski terpisah jarak yang jauh. Suatu hari, Mitsuha terbangun di sebuah ruangan yang bukan ruangannya. Ia mendapati dirinya di Tokyo dengan tubuh lelaki.</string>

    <string name="movRom3_title">Life in a Year</string>
    <string name="movRom3_duration">Durasi: 1j 47m</string>
    <string name="movRom3_date">Tahun Rilis: 2020</string>
    <string name="movRom3_direc">Sutradara: Mitja Okorn</string>
    <string name="movRom3_syn">Sinopsis: Film ini mengisahkan tentang seorang remaja bernama Daryn yang mengetahui bahwa pacarnya, Isabelle, menderita penyakit terminal. Untuk membuat sisa hidup Isabelle lebih berarti, Daryn berkomitmen untuk memberinya seluruh kehidupan mereka dalam satu tahun. Mereka mengalami petualangan dan belajar banyak hal selama setahun tersebut, sementara Daryn berusaha menciptakan kenangan yang tak terlupakan bagi Isabelle.</string>

</resources>