<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_android"
    android:padding="16dp"
    tools:context=".SecondFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Movie Item 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/imgMegamind"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/megamind_mv"
                    android:scaleType="centerCrop"
                    android:contentDescription="Megamind Poster"
                    android:clickable="true"
                    android:focusable="true"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom1_title"
                        android:textSize="18sp"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom1_duration"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom1_date"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom1_direc"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom1_syn"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <!-- Movie Item 2  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <ImageView
                    android:id="@+id/imgBossBaby"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/boss_baby"
                    android:scaleType="centerCrop"
                    android:contentDescription="Boss Baby Poster"
                    android:clickable="true"
                    android:focusable="true"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom2_title"
                        android:textSize="18sp"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom2_duration"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom2_date"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom2_direc"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom2_syn"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <!-- Movie Item 3  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <ImageView
                    android:id="@+id/imgSeaBeast"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/sea_beast"
                    android:scaleType="centerCrop"
                    android:contentDescription="Sea Beast Poster"
                    android:clickable="true"
                    android:focusable="true"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom3_title"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom3_duration"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom3_date"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom3_direc"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movCom3_syn"
                        android:textColor="@color/white2"
                        android:layout_marginBottom="4dp"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Add more movie items as needed -->

        </LinearLayout>
    </ScrollView>
</FrameLayout>
