<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_android"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white2"
            android:padding="@dimen/padding_reguler"
            android:text="@string/article_title"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_heading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/article_subheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_reguler"
                    android:text="@string/article_subtitle"
                    android:textColor="@color/white2"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"/>

                <TextView
                    android:id="@+id/article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:padding="@dimen/padding_reguler"
                    android:textColor="@color/white2"
                    android:text="@string/article_text" />
            </LinearLayout>
        </ScrollView>
</RelativeLayout>